tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:35:
unexpected undefined
expecting ), comma, or rest of range
            matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
                                      ^